# learning-build

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  build.sh  main.cpp  todo.cpp  todo.h  ui.h
apps/: CMakeLists.txt
docs/: 01_FirstSteps_ManualCompilation_SingleFile.md  02_CompilingAndLinking.md  03_CompilerFlagsAndWarnings.md  04_BuildTypes_DebugAndRealse.md  05_RefactoringAndCompilationOfMultipleFiles  06_BuildingMakeFile.md  07_OrganizingCodeAndAddingGoogleTest.md  08_MakefileFlagsExplanation.md  09_WrappingUpMakefilesStage.md  10_UnderstandingGitSubmodules.md  11_TransitioningFromMakefileToCMake.md  12_CmakeWorkflowWithCommandOptionsAndShellScripts.md  13_RefactoringToModernCMake.md  14_BuildConfigurationsWithCMakeAndPresets.md  15_CMakePresetsAndBuildDirectories.md  16_ClangFormatOverview.md
libs/: CMakeLists.txt  todo.cpp  todo.h  ui.cpp  ui.h
src/: ui.cpp
tests/: CMakeLists.txt  simple_test.cpp
